...
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:autofillHints="@string/editTextTextPassword"
            android:hint="@string/editTextTextPassword"/>

        <TextView
            android:id="@+id/text_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stix"
            android:textSize="22sp"
            android:text="@={vm.diagnosticText}"
            app:layout_constraintBottom_toBottomOf="parent"
...
