...
        <variable
            name="mViewmodel"
            type="com.gedar0082.debater.viewmodel.DebateViewModel" />
    </data>

        <ScrollView
            android:id="@+id/dialog_new_thesis_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_round">

            <LinearLayout
                android:id="@+id/dialog_new_thesis_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/Dialog_text"
...
